# blobfish

./: .gitignore  Cargo.toml  Makefile  Pipfile  README.md  infsrv.spec
bfsrv/: Cargo.toml  api.oas.json  schema.sql
bfsrv/src/: config.rs  currency_converter.rs  infsrv_pool.rs  ledger.rs  mailer.rs  main.rs  paypal.rs  postgres.rs  store.rs
bfsrv/src/data/: campaign.rs  capability.rs  mod.rs  node.rs  payment.rs  token.rs  user.rs
bfsrv/src/server/: middleware.rs  mod.rs  payment.rs  token.rs  transcribe.rs  user.rs
bfsrv/src/util/: fmt.rs
infsrv/: __main__.py  capability.json  capability.py  pyi.spec  segment.py  util.py
infsrv/handler/: __init__.py  segment.py  transcribe.py
infsrv/server/: __init__.py  common.py  segment.py  transcribe.py
infsrv/test/: test_segment.py  test_util.py
script/: deploy-bfsrv.sh  deploy-infsrv.sh
test/: measure_accuracy.py
