[workspace]
members = ["bfsrv"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.5", "features" = ["multipart", "ws"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
futures = "0.3.30"
log = "0.4.21"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
