[workspace]
members = ["bfsrv"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.5", "features" = ["multipart", "ws"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
ogg = { version = "0.9.1", "features" = ["async"] }
rubato = "0.15.0"
symphonia = "0.5.4"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
