[workspace]
members = ["bfsrv"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.5", features = ["multipart", "ws"] }
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
deadpool-postgres = { version = "0.13.2" }
env_logger = "0.11.3"
futures = "0.3.30"
hound = "3.5.1"
log = "0.4.21"
ogg = { version = "0.9.1", features = ["async"] }
reqwest = { version = "0.12.4", features = ["multipart"] }
rubato = "0.15.0"
rust_decimal = { version = "1.35.0", features = ["db-postgres"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
symphonia = "0.5.4"
thiserror = "1.0.59"
time = "0.3.36"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-postgres = { version = "0.7.10", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
