[package]
name = "bfsrv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
ogg = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
