[package]
name = "bfsrv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hound = { workspace = true }
lettre = { workspace = true }
log = { workspace = true }
ogg = { workspace = true }
postgres-types = { workspace = true }
reqwest = { workspace = true }
rubato = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-tungstenite = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
